@@ -17,6 +17,9 @@ import necesse.inventory.container.customAction.ContentCustomAction;
 import necesse.inventory.container.customAction.EmptyCustomAction;
 import necesse.inventory.container.mob.ShopContainer;
 import necesse.inventory.container.slots.ExtractOnlyContainerSlot;
+import necesse.inventory.enchants.ItemEnchantment;
+import necesse.inventory.item.Item;
+import necesse.inventory.item.miscItem.EnchantingScrollItem;
 import necesse.level.maps.hudManager.floatText.ItemPickupText;
 import settlementexpansion.inventory.slots.GeodeSlot;
 import settlementexpansion.item.misc.GeodeItem;
