@@ -5,8 +5,9 @@ Added:
 - Added a config option to enable or disable new settlement level changes
 - Added a config option to enable or disable the requirement of a settler owner being online in order to kill the settlers
 - Added a take-over mechanic for settlements with pvp enabled. Requires all settlers to be dead and a claiming scroll in the player's inventory, who's trying to take over the settlement
-- Added a "Quick transfer to inventory" check box to the blacksmith's geode breaking menu, to transfer the result to the inventory directly so you don't have to perform 2 clicks per geode
+- Added a "Quick transfer to inventory" check box to the blacksmith's geode breaking menu, to transfer the result to the inventory directly, so you don't have to perform 2 clicks per geode
 - Added a "Pin Required Items" button to blueprints in the menu, so you don't have to go back and forth constantly to see what's missing
+- Added a reinforced outer version of some walls that take more time to break from one side than the other
 
 Changes:
 - Included a discord link in the mod description
@@ -23,3 +24,4 @@ Changes:
 
 Fixes:
 - Fixed the study table recipe not appearing in the demonic workshop, thanks DecayedBit for the report
+- Fixed drying rack recipe showing in workstation instead of demonic station
